--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=bank-api
+spring.datasource.url=${PG_URL}
+spring.datasource.username=${PG_USERNAME}
+spring.datasource.password=${PG_PASSWORD}
