feat: configure cors origin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=bank-api
 spring.datasource.url=${PG_URL}
 spring.datasource.username=${PG_USERNAME}
-spring.datasource.password=${PG_PASSWORD}
+spring.datasource.password=
+spring.mvc.dispatch-options-request=true
+spring.webmvc.cors.allowed-origins=http://localhost:5173
